# rsmaxsat

./: Cargo.toml  LICENSE  README.MD  build.rs
patches/: evalmaxsat.patch
src/: lib.rs
src/slover/: evalmaxsat.rs  mod.rs
src/solver/: evalmaxsat.rs  mod.rs
