[package]
name = "rsmaxsat"
version = "0.1.1"
edition = "2021"
authors = ["Xie Zhongtao"]
categories = ["science", "mathematics"]
description = "The rsmaxsat is a Rust library that provides bindings for the MaxSAT solver"
keywords = ["maxsat", "EvalMaxSAT"]
license = "MIT"
repository = "https://github.com/francisol/rsmaxsat.git"
[dependencies]

[build-dependencies]
bindgen = "0.70.1"
cmake = "0.1"
flate2 = "1.0"
reqwest = {version = "0.12", features = ["blocking", "rustls-tls"], default-features = false}
tar = "0.4"
[package.metadata.docs.rs]

features = [""]

# Whether to pass `--no-default-features` to Cargo (default: false)
no-default-features = true

# Target to test build on, used as the default landing page (default: "x86_64-unknown-linux-gnu")
#
# Any target supported by rustup can be used.
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["evalmaxsat"]
evalmaxsat = []
